Fixed promo box
Removed extra spacing at foot of promo box

--- a/css/edpsy-style.css
+++ b/css/edpsy-style.css
@@ -3950,6 +3950,7 @@ h1.title {
 .skt-section .overlap-img-title a:hover, .skt-section .overlap-img-title a:active {
   box-shadow: 0px 0px 12px #8c8a8a;
   background: none;
+  line-height: 0;
 }
 .home .overlap-title h1.title .fa-angle-right {
   margin-left: 20px;
